...
    let numberFormatter = NumberFormatter()
    
    @IBAction func buttonToggled(sender: AnyObject) {
        dismissKeyboard(sender: sender)
        guard let buttonTitle = toggleButton.title(for: .normal) else { return }
        
        if buttonTitle == "Start" {
            startTimer()
        } else if buttonTitle == "Stop" {
            stopTimer()
        }
    }
    
    @objc func timerFired() {
        guard let soundTitle = clickSound.text, let sound = ClickSound(rawValue: soundTitle) else { return }
...
